--- a/index.html
+++ b/index.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Kevin Luong | Portfolio</title>
 </head>
+
 <body>
-    test
+    <div class="container-lg">
+        <div class="row-gallery">
+            <div class="col-gallery">
+                <div class="project-card">
+                    <video src="green_horizons.mp4" class="media" autoplay muted loop></video>
+                    <div class="project-info">
+                        <h1 class="title">Green Horizons</h1>
+                        <p class="medium">Made with Unity</p>
+                        <p class="description">A 2D pixel game to engage youth in sustainable practices.</p>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <img src="hopibot.png" class="media">
+                    <div class="project-info">
+                        <h1 class="title">HopiBot</h1>
+                        <p class="medium">Made with Flask and MySQL</p>
+                        <p class="description">An accessible, easy to use chatbot designed to make the process of admitting patients more efficient — transforming basic in person processes to a digital one.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-gallery">
+                <div class="project-card">
+                    <img src="mealer_mockup.png" class="media">
+                    <div class="project-info">
+                        <h1 class="title">Mealer</h1>
+                        <p class="medium">Made with Android Studio (Java) and Firebase</p>
+                        <p class="description">An Ottawa-based meal sharing application that allows local cooks to sell meals to clients from their home.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-gallery" >
+                <div class="article-card">
+                    <h3>HopiBot wins 2nd overall at HawkHacks 2022</h3>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
